# cache-simulator

./: .gitignore  Cargo.toml  README.md  nocache.json
cachelib/: Cargo.toml  build.rs
cachelib/benches/: examples.rs
cachelib/src/: cache.rs  config.rs  io.rs  lib.rs  replacement_policies.rs  simulator.rs  util.rs
cachelib/src/test/: tests.rs
cachesim/: Cargo.toml
cachesim/src/: main.rs
src/: cache.rs  config.rs  io.rs  main.rs  simulator.rs
src/test/: tests.rs
