[workspace]
members = [
    "cachelib",
    "cachesim",
]

# The current tests run all examples, this speeds them up considerably. Remove when debugging.
# Debug assertions are active by default
[profile.test]
opt-level = 3

[profile.release]
# Can also use debug = true and debug-assertions = true can be useful here
lto = true