[workspace]
members = [
    "cachelib",
    "cachesim",
]

# The current tests run all examples, this speeds them up considerably. Remove when debugging.
# Debug assertions are active by default
[profile.test]
opt-level = 3

[profile.release]
# LTO allows for optimisations across crates, which can allow for some small performance gains
lto = true
# We don't need to handle panics anywhere, aborting is fine, although gains from this are marginal
panic = "abort"